# bmp_reader

./: CMakeLists.txt  README.md  main.cpp
inc/: BMP_Reader.hpp
src/: BMP_Reader.cpp
